# tiny_ninja

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  tests.sh
src/: main.c
src/clip/: CMakeLists.txt  clip.c  clip.h
src/clip/internal/: opt_d.c  opt_d.h  opt_e.c  opt_e.h  opt_m.c  opt_m.h
src/clip/tests/: main.c  test_clip.c  test_clip.h  test_opt_d.c  test_opt_d.h  test_opt_e.c  test_opt_e.h  test_opt_m.c  test_opt_m.h
src/common/: CMakeLists.txt  common.c  common.h  console.c  console.h
src/common/tests/: main.c  test_common.c  test_common.h
src/executer/: CMakeLists.txt  executer.c  executer.h
src/executer/tests/: main.c  test_executor.c  test_executor.h
src/fs/: CMakeLists.txt  fs.c  fs.h
src/fs/tests/: main.c  test_fs.c  test_fs.h
src/sapper/: sapper.c  sapper.h
